# python-project-50

./: Makefile  README.md  pyproject.toml
gendiff/: info.py
gendiff/scripts/: gendiff_info.py
